src/styles/Home.css
#patrick-rothfuss-wr {
    position: relative;
    width: 330px;
    z-index: 20;
    text-align: left;
    color: rgb(0, 0, 0);
    font-weight: 500;
    font-family: HelveticaNeue;
    font-size: 30px;
    float: right;
    display: block;
    margin-right: 330px;
    height: 36px;
}

#its-like-everyone-t {
    position: relative;
    width: 527px;
    z-index: 10;
    text-align: left;
    color: rgb(0, 0, 0);
    font-family: Helvetica;
    font-size: 30px;
    float: right;
    display: block;
    margin-right: 133px;
    height: 108px;
}

#howard-gardner-psyc {
    position: relative;
    width: 421px;
    z-index: 10;
    text-align: left;
    color: rgb(0, 0, 0);
    font-weight: 500;
    font-family: HelveticaNeue;
    font-size: 30px;
    float: right;
    display: block;
    margin-top: 75px;
    margin-right: -421px;
    height: 36px;
}

#if-you-want-to-learn {
    position: relative;
    width: 552px;
    z-index: 20;
    text-align: left;
    color: rgb(0, 0, 0);
    font-family: Helvetica;
    font-size: 30px;
    margin-right: auto;
    margin-left: auto;
    display: block;
    height: 108px;
    float: left;
}

#steve-jobs {
    position: relative;
    width: 155px;
    z-index: 20;
    text-align: left;
    color: rgb(0, 0, 0);
    font-weight: 500;
    font-family: HelveticaNeue;
    font-size: 26px;
    float: left;
    display: block;
    margin-right: 505px;
    height: 36px;
}

/* #bitmap {
    position: relative;
    width: 529px;
    height: 137px;
    z-index: 10;
    float: right;
    display: block;
    margin-right: 131px;
} */


#cover-001 {
    position: absolute;
    top: 123px;
    left: -539px;
    width: 545.094px;
    height: 835px;
    z-index: 150;
    right: 539px;
    margin-right: auto;
    margin-left: auto;
}

#cover-002 {
    position: absolute;
    top: 123px;
    left: 1px;
    width: 545.094px;
    height: 835px;
    z-index: 180;
    right: -1px;
    margin-right: auto;
    margin-left: auto;
}

#michael-margolis-te {
    position: relative;
    width: 429px;
    z-index: 10;
    text-align: left;
    color: rgb(0, 0, 0);
    font-weight: 500;
    font-family: HelveticaNeue;
    font-size: 30px;
    margin-right: auto;
    margin-left: auto;
    display: block;
    margin-top: 2px;
    left: -62px;
    height: 36px;
}

#group-4 {
    position: relative;
    margin-right: auto;
    margin-left: auto;
    width: 552px;
    z-index: 10;
    display: block;
    margin-top: 120px;
    left: 576px;
}

section {
    width: 100%;
    left: 0px;
    position: relative;
    overflow: visible;
}

#most-powerful-section {
    /* z-index: 200; */
    position: relative;
    display: inline-block;
    z-index: 15;
    float: left;
    text-align: center;
    padding-top: 33px;
    margin-top: 0px;
    margin-left: 550px;
    font-family: "Helvetica-Oblique", Helvetica, Arial, serif;
    font-size: 26px;
}

#generaton {
  position: relative;
  display: inline-block;
  float: left;
  text-align: left;
  margin-left: 400px;
  padding-left: 0px;
  font-family: "Helvetica-Oblique", Helvetica, Arial, serif;
  font-size: 26px;

}

#steve-jobs-section {
    z-index: 80;
    position: relative;
    display: inline-block;
    text-align: left;
    margin-top: 0px;
    margin-left: 75px;
    font-family: "HelveticaNeue-Medium", Helvetica, Arial, serif;
    font-size: 26px;
    float: left;
}

#group-3-section {
    z-index: 40;
    position: relative;
    display: inline-block;
    text-align: center;
    padding-top: 94px;
}

#its-like-everyone-t-section {
    z-index: 60;
    position: relative;
    display: inline-block;
    text-align: center;
    padding-top: 79px;
    margin-top: 0px;
}

#patrick-rothfuss-wr-section {
    z-index: 90;
    position: relative;
    display: inline-block;
    text-align: center;
    padding-top: 7px;
}

